kubernetes/apps/obsidian/couchdb/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: obsidian
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - obsidian.blackcats.cc
  rules:
    - backendRefs:
        - name: couchdb
          port: 5984
